# ToyC_Test

./: README.md  build.gradle  gradlew.bat  pom.xml
ToyC/: CMakeLists.txt  output.s  test_complex.tc  test_if_both.tc  test_if_else.tc
ToyC/include/: AST.h  CodeGenerator.h  IR.h  IRGenerator.h  Lexer.h  Optimizer.h  Parser.h  SemanticAnalyzer.h  SymbolTable.h  Token.h
ToyC/src/: main.cpp
ToyC/src/AST/: AST.cpp
ToyC/src/Codegen/: CodeGenerator.cpp
ToyC/src/IR/: IR.cpp  IRGenerator.cpp
ToyC/src/Lexer/: Lexer.cpp  Token.cpp
ToyC/src/Optimizer/: Optimizer.cpp
ToyC/src/Parser/: Parser.cpp
ToyC/src/Semantic/: SemanticAnalyzer.cpp
ToyC/src/SymbolTable/: SymbolTable.cpp
ToyC_Test/: settings.gradle
ToyC_Test/src/main/antlr4/com/toycc/frontend/: ToyC.g4
ToyC_Test/src/main/java/com/toycc/ast/: BlockStmt.java  BreakStmt.java  CallExpr.java  CompUnit.java  ConstDecl.java  EmptyStmt.java  Expr.java  ExprStmt.java  FuncDef.java  NameExpr.java  Node.java  NodeVisitor.java  ReturnStmt.java  Stmt.java  UnaryExpr.java  (+2 more)
src/main/java/com/toycc/: Main.java
src/main/java/com/toycc/ast/: AssignStmt.java  BinaryExpr.java  ContinueStmt.java  Decl.java  DeclStmt.java  IfStmt.java  NumberExpr.java  Param.java
src/main/java/com/toycc/backend/: RiscVEmitter.java
src/main/java/com/toycc/frontend/: ASTBuilder.java
src/main/java/com/toycc/ir/: Global.java  IRBuilder.java  InstOp.java  Program.java  UnaryOp.java
src/main/java/com/toycc/optim/: Optimizer.java
src/main/java/com/toycc/sema/: SemanticAnalyzer.java
src/main/java/com/toycc/util/: CompilerError.java
(+5 files in other folders)
